--- a/book.toml
+++ b/book.toml
@@ -1,6 +1,6 @@
 [book]
-authors = ["otsukaresamaja"]
+authors = ["Kana"]
 language = "en"
 multilingual = false
 src = "src"
-title = "rust_bioinformatics_book"
+title = "Bioinformatics Rust Book"
