finish cleanup to chapter 3 and add gif

--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,4 @@ authors = ["Kana"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Bioinformatics Rust Book"
+title = "Bioinformatics in Rust"
