--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ deploy:
   edge: true
   cleanup: false
   github-token: $GITHUB_TOKEN
-  local-dir: bioinformatics_rust_book/book
+  local-dir: book
   keep-history: false
   on:
     branch: master
