--- a/book.toml
+++ b/book.toml
@@ -5,6 +5,6 @@ multilingual = false
 src = "src"
 title = "Bioinformatics in Rust"
 
-[dependencies]
-image = "0.23.14"
-bioutils = "0.2.1"
+#[dependencies]
+#image = "0.23.14"
+#bioutils = "0.2.1"
