--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Bioinformatics In Rust"
+name = "Bioinformatics_Rust_Book"
 version = "0.0.1"
 authors = ["Kana"]
 edition = "2018"
