--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ readme = "README.md"
 [dependencies]
 image = "0.23.14"
 bioutils = "0.2.1"
+
+[[bin]]
+name = "Bioinformatics_Rust_Book"
+path = "src/Bioinformatics_Rust_Book.rs"
